<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/bg"
    android:gravity="center">

    <TextView
        android:text="@string/quiz_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginBottom="12dp">
    </TextView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:cardCornerRadius="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="15dp">

            <TextView

                android:text="@string/welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="32sp"
                android:textStyle="bold"
                android:textColor="#134324">
            </TextView>

            <TextView
                android:text="@string/enter_your_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="#212433"
                android:textStyle="normal"
                android:layout_marginTop="12dp"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:lineSpacingExtra="2dp">
            </TextView>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">


                <Button
                    android:id="@+id/go_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/go"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:fontFamily="sans-serif-medium"
                    android:layout_marginTop="10dp"
                    app:cornerRadius="18dp"
                    app:backgroundTint="#FE692BD5"
                    app:iconPadding="8dp"
                    app:iconGravity="textStart"
                    app:strokeWidth="0dp"
                    app:rippleColor="#E0CFF8"
                    android:paddingVertical="12dp">
                </Button>


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name"
                    android:hint="@string/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#134324"
                    android:textSize="16sp"
                    android:padding="12dp"
                    android:backgroundTint="@android:color/transparent"
                    android:inputType="textPersonName" >

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

</androidx.appcompat.widget.LinearLayoutCompat>